Security: Enhance .gitignore with comprehensive patterns for secrets, IDE, dependencies, and builds
- Added patterns for IDE files (.vscode, .idea)
- Added patterns for environment and secrets (.env.local, *.pem, *.key)
- Added patterns for Python build artifacts and distributions
- Added patterns for testing coverage and cache files
- Added patterns for data, models, and database files
- Ensures sensitive credentials are never accidentally committed

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,45 @@ __pycache__/
 .venv/
 .env
 app/storage/
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Environment and secrets
+.env
+.env.local
+.env.*.local
+secrets/
+*.pem
+*.key
+
+# Dependencies
+node_modules/
+*.egg-info/
+dist/
+build/
+.Python
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Data and models
+*.pkl
+*.pickle
+*.joblib
+data/
+models/
+*.db
+*.sqlite
+
+# Build artifacts
+*.whl
+*.tar.gz
+*.zip
