--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,33 @@
-OPENAI_API_KEY=your_key_here
+# RAG_Chat Environment Configuration
+# Copy this file to .env and fill in your actual values
+# IMPORTANT: Never commit the actual .env file with real credentials
+
+# ==================== OpenAI Configuration ====================
+# Get your API key from https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Chat model for conversational responses
+# Options: gpt-4, gpt-4-turbo, gpt-4o, gpt-4o-mini, gpt-3.5-turbo
 OPENAI_CHAT_MODEL=gpt-4o-mini
+
+# Embedding model for document vectorization
+# Used to convert documents into embeddings for semantic search
+# Options: text-embedding-3-large, text-embedding-3-small
 OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+
+# ==================== Application Settings ====================
+# Directory for storing vector database and documents
+STORAGE_DIR=./app/storage
+
+# Collection name in Chroma vector database
+COLLECTION_NAME=knowledge_agent
+
+# Maximum tokens per chunk when splitting documents
+MAX_CHUNK_TOKENS=1000
+
+# Token overlap between chunks (helps with context continuity)
+CHUNK_OVERLAP_TOKENS=150
+
+# ==================== Optional: Additional Features ====================
+# Add configuration for additional services/features as needed
+# Example: Database connections, logging, etc.
