--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
 
       - name: Install dependencies
         run: pip install -r requirements.txt
+              - run: pip install flake8
 
       - name: Run linting
         run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
