--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -160,8 +160,7 @@ jobs:
 
   status:
     name: Deployment Status
-    needs: [test, deploy-staging]
-    runs-on: ubuntu-latest
+  needs: [test, build, deploy-staging]    runs-on: ubuntu-latest
     if: always()
     steps:
       - name: Check workflow status
